[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/Menu/placeholder background.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Menu/background.png" type="Texture" id=2]
[ext_resource path="res://menufont.tres" type="DynamicFont" id=3]
[ext_resource path="res://ostrich-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scripts/Main Menu.gd" type="Script" id=7]
[ext_resource path="res://Sprites/Menu/New File.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 192
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="CenterContainer"]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )

[node name="Main Menu" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 40.0
margin_right = -20.0
margin_bottom = -40.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Main Menu"]
margin_right = 1880.0
margin_bottom = 1000.0
custom_constants/separation = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/HBoxContainer"]
margin_right = 256.0
margin_bottom = 1000.0
rect_min_size = Vector2( 256, 64 )
size_flags_vertical = 11
alignment = 1

[node name="Continue" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer"]
margin_top = 298.0
margin_right = 256.0
margin_bottom = 362.0
size_flags_vertical = 10
texture_normal = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="Main Menu/HBoxContainer/VBoxContainer/Continue"]
margin_left = 12.0
margin_top = 12.0
margin_right = 244.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu/HBoxContainer/VBoxContainer/Continue/MarginContainer"]
margin_right = 232.0
margin_bottom = 40.0
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]continue[/center]"
text = "continue"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="New Game" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer"]
margin_top = 366.0
margin_right = 256.0
margin_bottom = 430.0
texture_normal = ExtResource( 2 )

[node name="PopupMenu" type="PopupMenu" parent="Main Menu/HBoxContainer/VBoxContainer/New Game"]
margin_right = 20.0
margin_bottom = 20.0

[node name="VBoxContainer" type="VBoxContainer" parent="Main Menu/HBoxContainer/VBoxContainer/New Game/PopupMenu"]
margin_right = 40.0
margin_bottom = 40.0

[node name="File 5" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer/New Game/PopupMenu/VBoxContainer"]
margin_right = 128.0
margin_bottom = 40.0
texture_normal = ExtResource( 8 )

[node name="File 4" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer/New Game/PopupMenu/VBoxContainer"]
margin_right = 128.0
margin_bottom = 40.0
texture_normal = ExtResource( 8 )

[node name="File 3" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer/New Game/PopupMenu/VBoxContainer"]
margin_right = 128.0
margin_bottom = 40.0
texture_normal = ExtResource( 8 )

[node name="File 2" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer/New Game/PopupMenu/VBoxContainer"]
margin_right = 128.0
margin_bottom = 40.0
texture_normal = ExtResource( 8 )

[node name="File 1" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer/New Game/PopupMenu/VBoxContainer"]
margin_right = 128.0
margin_bottom = 40.0
texture_normal = ExtResource( 8 )

[node name="MarginContainer2" type="MarginContainer" parent="Main Menu/HBoxContainer/VBoxContainer/New Game"]
margin_left = 12.0
margin_top = 12.0
margin_right = 244.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu/HBoxContainer/VBoxContainer/New Game/MarginContainer2"]
margin_right = 232.0
margin_bottom = 40.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]new game[/center]"
text = "new game"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer"]
margin_top = 434.0
margin_right = 256.0
margin_bottom = 498.0
texture_normal = ExtResource( 2 )

[node name="PopupMenu" type="PopupMenu" parent="Main Menu/HBoxContainer/VBoxContainer/Options"]
margin_right = 20.0
margin_bottom = 20.0

[node name="MarginContainer3" type="MarginContainer" parent="Main Menu/HBoxContainer/VBoxContainer/Options"]
margin_left = 12.0
margin_top = 12.0
margin_right = 244.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu/HBoxContainer/VBoxContainer/Options/MarginContainer3"]
margin_right = 232.0
margin_bottom = 40.0
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]options[/center]"
text = "options"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer"]
margin_top = 502.0
margin_right = 256.0
margin_bottom = 566.0
texture_normal = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Main Menu/HBoxContainer/VBoxContainer/Credits"]
visible = false

[node name="MarginContainer4" type="MarginContainer" parent="Main Menu/HBoxContainer/VBoxContainer/Credits"]
margin_left = 12.0
margin_top = 12.0
margin_right = 244.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu/HBoxContainer/VBoxContainer/Credits/MarginContainer4"]
margin_right = 232.0
margin_bottom = 40.0
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]credits[/center]"
text = "credits"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="TextureButton" parent="Main Menu/HBoxContainer/VBoxContainer"]
margin_top = 570.0
margin_right = 256.0
margin_bottom = 634.0
texture_normal = ExtResource( 2 )

[node name="MarginContainer5" type="MarginContainer" parent="Main Menu/HBoxContainer/VBoxContainer/Exit"]
margin_left = 12.0
margin_top = 12.0
margin_right = 244.0
margin_bottom = 52.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu/HBoxContainer/VBoxContainer/Exit/MarginContainer5"]
margin_right = 232.0
margin_bottom = 40.0
custom_fonts/mono_font = ExtResource( 3 )
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]exit[/center]"
text = "exit"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu/HBoxContainer/VBoxContainer"]
margin_top = 951.0
margin_right = 256.0
margin_bottom = 1000.0
size_flags_horizontal = 3
size_flags_vertical = 10
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Version 0.01[/center]"
text = "Version 0.01"
fit_content_height = true
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="Main Menu"]
margin_right = 1880.0
margin_bottom = 193.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]Name of the Game[/center]"
text = "Name of the Game"
fit_content_height = true
scroll_active = false
[connection signal="pressed" from="Main Menu/HBoxContainer/VBoxContainer/Continue" to="Main Menu" method="_on_Continue_pressed"]
[connection signal="pressed" from="Main Menu/HBoxContainer/VBoxContainer/New Game" to="Main Menu" method="_on_New_Game_pressed"]
[connection signal="pressed" from="Main Menu/HBoxContainer/VBoxContainer/Options" to="Main Menu" method="_on_Options_pressed"]
[connection signal="pressed" from="Main Menu/HBoxContainer/VBoxContainer/Credits" to="Main Menu" method="_on_Credits_pressed"]
[connection signal="pressed" from="Main Menu/HBoxContainer/VBoxContainer/Exit" to="Main Menu" method="_on_Exit_pressed"]
